# ModuleExperiment

./: .gitignore  ModuleExperiment.sln
HeaderConsumer/: HeaderConsumer.vcxproj  main.cpp
ModuleConsumer/: ModuleConsumer.vcxproj  main.cpp
PocoTest/: CMakeLists.txt  main.cpp
cmake-modules/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  fragmentA.cppm  fragmentB.cppm  library.cppm  main.cpp
